--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/LeekSwan/LeekSwanV2#readme",
   "dependencies": {
+    "bootstrap": "^5.0.0-beta1",
     "browser-sync": "^2.26.13"
   }
 }
